# holywater

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: trigger-blog-pages.yml
docs/: corpus_sources.md
examples/: example_usage.py
src/holywater/: __init__.py  __main__.py  api.py  build.py  cli.py  db.py  generator.py  models.py
src/holywater/static/: runtime.js
tests/: test_build.py  test_generator.py
