[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holywater"
version = "0.1.0"
description = "A biblical-style hydration reminder generator with SQLite, CLI, and FastAPI modes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
holywater = "holywater.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
