[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "holywater"
version = "0.1.0"
description = "A biblical-style hydration reminder generator with SQLite, CLI, and FastAPI modes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Holy Water Contributors" },
]
keywords = ["cli", "fastapi", "sqlite", "text-generation", "hydration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.111.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/Surager/holywater"
Issues = "https://github.com/Surager/holywater/issues"

[dependency-groups]
dev = [
    "httpx2>=0.28.0",
    "pytest>=8.0.0",
]

[project.scripts]
holywater = "holywater.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
